# crafting-compiler

./: .gitignore
Generator/: CMakeLists.txt
Interpreter/: CMakeLists.txt
Machine/: CMakeLists.txt
Parser/: CMakeLists.txt
Scanner/: CMakeLists.txt
